<resources>
    <string name="app_name">Markit</string>
    <string name="action_add_trader">Add Trader</string>
    <string name="action_edit_trader">Edit Trader</string>
    <string name="action_trader">View Trader</string>
    <string name="vegetables">Vegetables</string>
    <string name="meats">Meats</string>
    <string name="name">Name</string>
    <string name="enter_PhoneNumber">Enter Phone Number</string>
    <string name="enter_Email">Enter Email</string>
    <string name="view_trader">View Trader</string>
    <string name="enter_Surname">Enter Surname</string>
    <string name="enter_Forename">Enter Forname</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Clonakilty Farmers Market App</string>
    <string name="nav_header_subtitle">management@clonmarket.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add_trader">Add Trader</string>
    <string name="menu_view_trader">Traders</string>
    <string name="menu_AboutUs">Clonakilty Farmers Market</string>
    <string name="menu_Location">Location</string>
    <string name="title_activity_location">Map</string>
    <string name="button_add">Add Trader</string>
    <string name="button_save">Save Trader</string>
    <string name="hint_Title">Trader Name</string>
    <string name="hint_Description">Trader Description</string>
    <string name="hint_Email">Trader Email</string>
    <string name="hint_Phone">Trader Phone Number</string>
    <string name="menu_add">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="message_enter_all_fields">Please enter all required fields!</string>
    <string name="admin_add_input">Enter trader details</string>

    <string name="menu_report_all">View All Traders</string>
    <string name="action_report">Report</string>
    <string name="action_edit">Edit post</string>
    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_profile_image">Select Profile Image</string>


    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
</resources>
