<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clon_about_us"
            android:icon="@mipmap/baseline_store_mall_directory_black_18dp"
            android:title="@string/menu_AboutUs" />
        <item
            android:id="@+id/nav_clon_trader"
            android:icon="@mipmap/baseline_account_circle_black_18dp"
            android:title="@string/menu_view_trader" />
        <item
            android:id="@+id/nav_Location"
            android:icon="@mipmap/baseline_person_pin_circle_black_18dp"
            android:title="@string/menu_Location" />
        <item
            android:id="@+id/nav_Trader_Posts"
            android:icon="@mipmap/baseline_person_pin_circle_black_18dp"
            android:title="Feeds" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>
</menu>
